dev tool clean up

--- a/app/client/styles/dev-tool.less
+++ b/app/client/styles/dev-tool.less
@@ -215,7 +215,12 @@
   overflow: auto;
   /* smooth scrolling on touch devices */
   -webkit-overflow-scrolling: touch;
-
+  .action-list-item:first-child {
+    color: red;
+    pre {
+      color: red;
+    }
+  }
   pre {
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
